# Study-Podcast-Generator

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/src/study_podcast/: __init__.py
backend/src/study_podcast/adapters/inbound/api/: audio.py  errors.py  jobs.py  projects.py  queue.py  schemas.py  scripts.py  settings.py  voices.py
backend/src/study_podcast/adapters/outbound/: audio_merger_wav.py  filesystem.py  in_memory_repositories.py  in_process_worker_pool.py  persistence_sqlite.py  tts_chatterbox.py  tts_fake.py
backend/src/study_podcast/application/: dtos.py  generation_job_commands.py  job_queue.py  job_runner.py  progress.py  read_models.py  use_cases.py
backend/src/study_podcast/domain/: __init__.py  entities.py  errors.py  ports.py  services.py  value_objects.py
backend/src/study_podcast/infrastructure/: __init__.py  app.py  config.py  container.py  route_interfaces.py  runtime_settings.py  runtime_settings_transaction.py  startup_recovery.py
backend/tests/: test_tooling_smoke.py
backend/tests/adapters/: test_filesystem_and_wav_merge.py  test_sqlite_persistence.py
backend/tests/api/: test_api.py  test_openapi_contract.py  test_runtime_settings.py
backend/tests/application/: test_generation_job_commands.py  test_job_queue.py  test_job_runner.py  test_read_models.py  test_use_cases.py  test_worker_pool.py
backend/tests/architecture/: test_import_boundaries.py
backend/tests/contracts/: test_chatterbox_adapter.py
backend/tests/infrastructure/: test_root_package_scripts.py  test_runtime_settings_transaction.py  test_startup_recovery.py  test_static_frontend.py
backend/tests/smoke/: test_fake_generation_flow.py
backend/tests/unit/: test_domain_model.py
docs/: ACCEPTANCE_CHECKLIST.md  API_CONTRACT.md  ARCHITECTURE.md  BROWSER_TEST_FINDINGS.md  DOMAIN_MODEL.md  FUNCTIONAL_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  NON_FUNCTIONAL_REQUIREMENTS.md  OUT_OF_SCOPE.md  PRD.md  SCOPE.md  TESTING_STRATEGY.md
docs/ADRs/: ADR-0001-architecture-style.md  ADR-0002-backend-stack.md  ADR-0003-frontend-stack.md  ADR-0004-tts-engine-strategy.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  (+1 more)
(+7 files in other folders)
