[project]
name = "study-podcast-backend"
version = "0.1.0"
description = "Local-first TTS study podcast generator backend"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
tts-chatterbox = [
  "chatterbox-tts>=0.1.0",
  "soundfile>=0.14.0",
  "setuptools<81",
  "torch==2.11.0",
  "torchaudio==2.11.0",
  "torchvision==0.26.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
# Chatterbox 0.1.7 pins older Torch packages. These overrides keep the local
# Windows CUDA stack on a matched PyTorch family that has been verified with
# Chatterbox and torchaudio imports.
override-dependencies = [
  "torch==2.11.0",
  "torchaudio==2.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
